--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="container my-5">
+        <div class="theme-switcher-container d-flex justify-content-end mb-4">
+          <input id="theme-switcher-input" type="checkbox" />
+          <label id="theme-switcher-label" for="theme-switcher-input"></label>
+        </div>
+
+        <div
+          class="country-search-container d-flex flex-column align-items-center"
+        >
+          <h1 class="fw-bold mb-4">Where in the world?</h1>
+          <div
+            class="country-search-bar-container w-100 position-relative d-flex align-items-center"
+          >
+            <input
+              class="w-100 py-2 px-5 rounded-4 fs-5"
+              type="text"
+              placeholder="Search for a country..."
+            />
+            <button class="position-absolute">
+              <svg
+                class="search-icon"
+                width="auto"
+                height="auto"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
+                  stroke="#000000"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="region-container"></div>
+        <div class="country-card-container"></div>
+      </div>
+    </div>
     <script type="module" src="./src/ts/main.ts"></script>
   </body>
 </html>
